--- a/lock.html
+++ b/lock.html
@@ -3,158 +3,147 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Unlock Diagnostic – Ripa Elevate Academy</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  <title>Unlock the Smart Diagnostic – Ripa Elevate Academy</title>
+
+  <!-- Optional: your site stylesheet (keeps branding consistent) -->
   <link rel="stylesheet" href="css/style.css"/>
+
   <style>
-    /* Light inline polish so this page looks great even without site CSS */
+    /* Small, self-contained styling that works even without style.css */
     :root{
-      --bg:#0e1320; --text:#f3f6ff; --muted:#c6cee6; --card:rgba(255,255,255,.06);
-      --stroke:rgba(255,255,255,.12); --brand:#F28F3B;
+      --bg:#0e1320; --card:rgba(255,255,255,.06); --stroke:rgba(255,255,255,.12);
+      --text:#f3f6ff; --muted:#b7c0d9; --accent:#F28F3B;
     }
-    body{background:var(--bg);color:var(--text);font-family:Poppins,system-ui,Segoe UI,Roboto,Arial,sans-serif;margin:0}
-    .wrap{width:min(1100px,92%);margin:0 auto}
-    header{border-bottom:1px solid var(--stroke);backdrop-filter:saturate(140%) blur(6px)}
-    header .bar{display:flex;align-items:center;justify-content:space-between;padding:14px 0}
-    .logo a{font-weight:700;color:var(--text);text-decoration:none}
-    nav ul{display:flex;gap:18px;list-style:none;padding:0;margin:0}
-    nav a{color:var(--muted);text-decoration:none}
-    .hero{padding:60px 0 24px;text-align:center}
-    h1{font-size:clamp(28px,4.8vw,46px);margin:0 0 10px}
-    .muted{color:var(--muted)}
-    .grid{display:grid;grid-template-columns:1.2fr .8fr;gap:18px}
+    body{margin:0;font-family:Poppins,system-ui,Segoe UI,Roboto,Arial,sans-serif;background:var(--bg);color:var(--text)}
+    header{border-bottom:1px solid var(--stroke)}
+    header .container{display:flex;justify-content:space-between;align-items:center;padding:16px 20px;max-width:1100px;margin:0 auto}
+    header .logo a{font-weight:700;text-decoration:none;color:var(--text)}
+    header nav a{color:var(--text);opacity:.9;text-decoration:none;margin-left:14px}
+    .section{padding:40px 20px}
+    .container{max-width:960px;margin:0 auto}
+    h1{font-size:clamp(28px,4.6vw,42px);margin:0 0 8px}
+    p.lead{color:var(--muted);margin:0 0 22px}
     .card{background:var(--card);border:1px solid var(--stroke);border-radius:16px;padding:18px}
-    .card h2{margin:0 0 8px}
-    .pill{display:inline-block;padding:6px 10px;border-radius:999px;background:rgba(255,255,255,.08);border:1px solid var(--stroke);font-size:12px;margin-right:6px}
-    .box{display:flex;align-items:center;gap:10px;justify-content:space-between;border:1px dashed var(--stroke);border-radius:12px;padding:12px;margin:8px 0;background:rgba(255,255,255,.04)}
-    .copy{cursor:pointer;border:1px solid var(--stroke);border-radius:10px;padding:6px 10px;background:rgba(255,255,255,.06);color:var(--text)}
-    .btn{display:inline-block;padding:12px 18px;border-radius:12px;border:1px solid var(--stroke);background:rgba(255,255,255,.06);color:var(--text);text-decoration:none;font-weight:600}
-    .btn.primary{background:var(--brand);border-color:var(--brand);color:#fff}
-    .cta{display:flex;gap:12px;flex-wrap:wrap;margin-top:14px}
-    footer{border-top:1px solid var(--stroke);margin-top:40px}
-    .note{font-size:13px;color:var(--muted)}
-    @media (max-width:900px){ .grid{grid-template-columns:1fr} }
+    .grid{display:grid;gap:14px}
+    @media(min-width:860px){.grid{grid-template-columns:1.05fr .95fr}}
+    .step h3{margin:0 0 8px}
+    .k{color:var(--muted);font-size:14px}
+    .line{display:flex;flex-wrap:wrap;gap:10px;align-items:center;margin:10px 0}
+    .pill{border:1px solid var(--stroke);border-radius:999px;padding:6px 10px;background:rgba(255,255,255,.06)}
+    .btn{display:inline-flex;align-items:center;gap:10px;padding:11px 16px;border-radius:12px;border:1px solid var(--stroke);background:rgba(255,255,255,.06);color:var(--text);text-decoration:none;font-weight:600;cursor:pointer}
+    .btn.primary{background:var(--accent);border-color:var(--accent);color:#fff}
+    input[type="text"]{width:100%;padding:12px 14px;border-radius:12px;border:1px solid var(--stroke);background:rgba(255,255,255,.08);color:var(--text);font-weight:600;letter-spacing:.5px}
+    .hint{color:var(--muted);font-size:13px;margin-top:8px}
+    .ok{color:#67e8a3}
+    .err{color:#ff9494}
+    footer{border-top:1px solid var(--stroke);text-align:center;color:var(--muted);padding:28px 0;margin-top:26px}
   </style>
 </head>
 <body>
   <header>
-    <div class="wrap bar">
+    <div class="container">
       <div class="logo"><a href="index.html">Ripa Elevate Academy</a></div>
       <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="pricing.html">Pricing</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
+        <a href="index.html">Home</a>
+        <a href="pricing.html">Pricing</a>
+        <a href="contact.html">Contact</a>
       </nav>
     </div>
   </header>
 
-  <main class="wrap">
-    <section class="hero">
+  <main class="section">
+    <div class="container">
       <h1>Unlock the Smart Diagnostic</h1>
-      <p class="muted">Pay once with Zelle, then unlock this device and start the test immediately.</p>
-    </section>
+      <p class="lead">Pay once with Zelle, then enter your unlock code to enable this device and start the test immediately.</p>
 
-    <section class="grid">
-      <!-- Left: Payment Instructions -->
-      <div class="card">
-        <h2>Step 1 — Send Zelle Payment</h2>
-        <p class="muted">Choose one of the options:</p>
-        <div class="pills">
-          <span class="pill">$10 — One-Time Diagnostic</span>
-          <span class="pill">$25/mo — Unlimited Diagnostics & Video Library</span>
-        </div>
+      <div class="grid">
+        <!-- STEP 1 -->
+        <div class="card step">
+          <h3>Step 1 — Send Zelle Payment ($10)</h3>
+          <p class="k">Use one of the options below. Add your student’s name in the note.</p>
 
-        <div class="box">
-          <div>
-            <div class="muted" style="font-size:12px;">Zelle (Phone)</div>
-            <div style="font-weight:700;">+1 (347) 996-0551</div>
+          <div class="line">
+            <span class="pill">Amount: $10</span>
+            <span class="pill">Memo: “Diagnostic + Student Name”</span>
           </div>
-          <button class="copy" data-copy="+13479960551">Copy</button>
-        </div>
 
-        <div class="box">
-          <div>
-            <div class="muted" style="font-size:12px;">Zelle (Email)</div>
-            <div style="font-weight:700;">ripabrian93@gmail.com</div>
+          <div class="line">
+            <strong>Phone:</strong>
+            <a class="btn" href="sms:+13479960551?&body=Hi%20Ripa%20Elevate%2C%20I%20sent%20the%20Zelle%20for%20the%20diagnostic.">+1 (347) 996-0551</a>
           </div>
-          <button class="copy" data-copy="ripabrian93@gmail.com">Copy</button>
+
+          <div class="line">
+            <strong>Email:</strong>
+            <a class="btn" href="mailto:ripabrian93@gmail.com?subject=Zelle%20payment%20for%20Diagnostic&body=Hi%20Ripa%20Elevate%2C%20I%20sent%20the%20Zelle%20for%20the%20diagnostic.">ripabrian93@gmail.com</a>
+          </div>
+
+          <p class="hint">After you send payment, you’ll receive a short <b>unlock code</b>.</p>
         </div>
 
-        <p class="note">Memo suggestion: “Diagnostic – student name & grade”.</p>
-        <p class="note">If you prefer another method (cash/card), contact us and we’ll help right away.</p>
-      </div>
+        <!-- STEP 2 -->
+        <div class="card step">
+          <h3>Step 2 — Enter Unlock Code</h3>
+          <p class="k">Paste the code you received and click <b>Unlock</b>. Access is tied to this device/browser.</p>
 
-      <!-- Right: Unlock -->
-      <div class="card">
-        <h2>Step 2 — Unlock This Device</h2>
-        <p class="muted">After you’ve sent the Zelle payment, click the button below to unlock access on this device.</p>
+          <form id="unlockForm" autocomplete="off">
+            <input id="unlockCode" type="text" placeholder="Enter unlock code" inputmode="text" required />
+            <div class="line">
+              <button class="btn primary" type="submit">Unlock &amp; Start</button>
+              <a class="btn" href="diagnostic-test.html">Back to Test</a>
+            </div>
+            <div id="msg" class="hint"></div>
+          </form>
 
-        <div class="cta">
-          <button id="unlockBtn" class="btn primary">I’ve Paid — Unlock & Start</button>
-          <a class="btn" href="diagnostic-test.html?access=diag">Try direct link</a>
+          <div class="hint" style="margin-top:12px">
+            Having trouble? Text <a href="sms:+13479960551">347-996-0551</a> for help.  
+            To reset this device later, visit <code>diagnostic-test.html?clear=1</code>.
+          </div>
         </div>
-
-        <hr style="border:none;border-top:1px solid var(--stroke);margin:16px 0"/>
-
-        <h3 style="margin:0 0 6px">Need help?</h3>
-        <p class="muted" style="margin:0 0 10px;">
-          Text or call <strong>(347) 996-0551</strong> or email <strong>ripabrian93@gmail.com</strong>.
-        </p>
-
-        <p class="note">
-          Unlocking is private by design. We only store a small “access granted” flag on this device.
-          To remove it later, open your browser’s Console and run:
-          <code>localStorage.removeItem('rea_diag_paid')</code>
-        </p>
       </div>
-    </section>
+    </div>
   </main>
 
-  <footer>
-    <div class="wrap" style="padding:24px 0;text-align:center;color:#c6cee6;">
-      © <span id="year"></span> Ripa Elevate Academy. All rights reserved.
-    </div>
-  </footer>
+  <footer>© <span id="year"></span> Ripa Elevate Academy · Private by design</footer>
 
+  <!-- Paywall helper (must be loaded before we call tryUnlockWithCode) -->
   <script src="js/paywall.js"></script>
   <script>
     // Year
     document.getElementById('year').textContent = new Date().getFullYear();
 
-    // Copy helpers
-    document.querySelectorAll('.copy').forEach(btn=>{
-      btn.addEventListener('click', async () => {
-        const val = btn.getAttribute('data-copy');
-        try {
-          await navigator.clipboard.writeText(val);
-          btn.textContent = 'Copied!';
-          setTimeout(()=>{ btn.textContent = 'Copy'; }, 1200);
-        } catch(e){
-          // fallback
-          const t = document.createElement('textarea');
-          t.value = val; document.body.appendChild(t); t.select();
-          try { document.execCommand('copy'); btn.textContent='Copied!'; } catch(_) {}
-          document.body.removeChild(t);
-          setTimeout(()=>{ btn.textContent = 'Copy'; }, 1200);
-        }
-      });
-    });
+    // OPTIONAL: allow ?code=XXXX to prefill the box (useful when you text parents a link)
+    const urlCode = new URLSearchParams(location.search).get('code');
+    if (urlCode) document.getElementById('unlockCode').value = urlCode;
 
-    // Unlock button: set local flag and go to the diagnostic
-    document.getElementById('unlockBtn').addEventListener('click', () => {
-      try { localStorage.setItem('rea_diag_paid','1'); } catch(e){}
-      location.href = 'diagnostic-test.html?access=diag';
+    // 🔑 Replace these with codes you issue to families
+    // You can keep several active codes at once, or rotate them weekly.
+    const VALID_CODES = [
+      'ripa-10',             // example
+      'elevate-guest',       // example
+      // add/remove codes as needed
+    ];
+
+    const form = document.getElementById('unlockForm');
+    const input = document.getElementById('unlockCode');
+    const msg   = document.getElementById('msg');
+
+    form.addEventListener('submit', function (e) {
+      e.preventDefault();
+      const code = input.value.trim();
+      msg.textContent = 'Checking…';
+
+      // Uses window.tryUnlockWithCode from js/paywall.js
+      const ok = window.tryUnlockWithCode(code, VALID_CODES);
+      if (ok) {
+        msg.innerHTML = '<span class="ok">Access granted. Redirecting…</span>';
+        // small pause for UX, then go to the test
+        setTimeout(()=>{ location.href = 'diagnostic-test.html'; }, 800);
+      } else {
+        msg.innerHTML = '<span class="err">That code was not recognized. Please double-check or contact us.</span>';
+      }
     });
   </script>
-
-  <noscript>
-    <div style="max-width:900px;margin:20px auto;color:#ffb4b4;text-align:center">
-      JavaScript is required to unlock. Please enable JavaScript and reload this page.
-    </div>
-  </noscript>
 </body>
 </html>
+
 
