--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       <h1>One-on-One Tutoring That Delivers Results</h1>
       <p>Boost confidence and grades with expert, personalized sessions for students in grades 2 through college. Clear, supportive instruction every step of the way.</p>
       <a href="booking.html" class="btn">Book Your First Session</a>
+      <a href="diagnostic-gate.html" class="btn">Take the Smart Diagnostic</a>
     </div>
     <div class="hero-image">
       <img src="https://images.pexels.com/photos/5212345/pexels-photo-5212345.jpeg?auto=compress&cs=tinysrgb&w=600" alt="One-on-one tutoring session" />
