--- a/resources.html
+++ b/resources.html
@@ -26,12 +26,12 @@
 
   <section class="section">
     <h2>Free & Premium Resources</h2>
-    <p>Access free downloadable worksheets, reading packets, and more. You can also subscribe to our premium video library or unlock our Smart Diagnostic for precise, actionable guidance.</p>
+    <p>Access free downloadable worksheets and reading packets. You can also unlock our premium tools including the Smart Diagnostic and video library for deeper practice.</p>
 
     <div class="cards colorful">
       <div class="card">
         <h3>Free Reading Packets</h3>
-        <p>Printable short stories and exercises to strengthen comprehension skills across all grades. New content is added regularly.</p>
+        <p>Printable short stories and exercises to strengthen comprehension skills across all grades. New content added regularly.</p>
       </div>
       <div class="card">
         <h3>Free Math Worksheets</h3>
@@ -39,28 +39,29 @@
       </div>
       <div class="card">
         <h3>Premium Video Library</h3>
-        <p>Subscribe to unlock our growing video library. Topics include advanced math, SAT prep, coding, AI skills, and more – available anytime, for all ages.</p>
+        <p>Subscribe for <strong>$25/month</strong> to unlock our growing video library: advanced math, SAT prep, coding, AI skills, and more.</p>
+        <p><a class="btn" href="pricing.html">See Subscription Options</a></p>
       </div>
     </div>
   </section>
 
-  <!-- Smart Diagnostic Promo -->
-  <section class="section" style="text-align:center;">
-    <div style="display:inline-block;background:#ffe7d3;color:#1E2A38;padding:.35rem .8rem;border-radius:999px;font-weight:700;margin-bottom:.6rem;">
-      NEW • Smart Diagnostic Test
-    </div>
-    <h2>Pinpoint Progress in Under 40 Minutes</h2>
-    <p style="max-width:850px;margin:0.5rem auto;color:#445;">
-      Get a real-time report that shows exactly where a student stands — down to the month — plus a clear, step-by-step study plan. Choose a one-time test, or subscribe for unlimited use.
-    </p>
-    <div style="margin-top:.75rem;display:flex;gap:10px;justify-content:center;flex-wrap:wrap;">
-      <!-- REPLACE with your Stripe Payment Links -->
-      <a class="btn" href="STRIPE_SUBSCRIPTION_LINK" target="_blank" rel="noopener">
-        Subscribe Now ($25/mo)
-      </a>
-      <a class="btn" href="STRIPE_ONETIME_LINK" target="_blank" rel="noopener">
-        One-Time Diagnostic ($10)
-      </a>
+  <section class="section alt-bg">
+    <h2>Smart Diagnostic (Math & ELA)</h2>
+    <p>Our adaptive, ~20-minute online diagnostic pinpoints a student’s current level, shows how it compares to grade expectations, and generates a simple action plan.</p>
+
+    <div class="cards colorful">
+      <div class="card">
+        <h3>Take the Diagnostic</h3>
+        <ul>
+          <li>Adaptive, under 40 minutes</li>
+          <li>Real-time estimated level & confidence</li>
+          <li>Clear strengths, priorities, and next steps</li>
+        </ul>
+        <p>
+          <a class="btn" href="diagnostic-gate.html">Start via Secure Gate</a>
+        </p>
+        <p class="small">Note: The diagnostic is included with the <strong>$25/month</strong> subscription (unlimited use). You can also unlock a one-time test for <strong>$10</strong>.</p>
+      </div>
     </div>
   </section>
 
@@ -70,6 +71,3 @@
   </footer>
 </body>
 </html>
-
-
-
