--- a/about.html
+++ b/about.html
@@ -1,51 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>About Us | Ripa Elevate Academy</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <title>About – Ripa Elevate Academy</title>
+  <meta name="description" content="Learn about Brian and Ripa Elevate Academy’s approach to clear, supportive one-on-one tutoring for grades 2 through college.">
+  <link rel="stylesheet" href="css/style.css"/>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+  <!-- Shared header (same as index.html) -->
   <header>
-    <nav class="navbar">
-      <div class="logo">Ripa Elevate Academy</div>
-      <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html" class="active">About</a></li>
-        <li><a href="services.html">Subjects</a></li>
-        <li><a href="pricing.html">Pricing</a></li>
-        <li><a href="booking.html">Book</a></li>
-        <li><a href="testimonials.html">Testimonials</a></li>
-        <li><a href="resources.html">Resources</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
+    <div class="container">
+      <div class="logo"><a href="index.html">Ripa Elevate Academy</a></div>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a class="active" href="about.html">About</a></li>
+          <li><a href="services.html">Subjects</a></li>
+          <li><a href="pricing.html">Pricing</a></li>
+          <li><a href="booking.html">Book</a></li>
+          <li><a href="testimonials.html">Testimonials</a></li>
+          <li><a href="resources.html">Resources</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
-  <main>
-    <section id="about">
-      <div class="about-container">
-        <div class="about-image">
-          <img src="images/Brian_Square_Profile.png" alt="Brian Profile">
-        </div>
-        <div class="about-text">
-          <h2>About Brian</h2>
-          <p>Brian is the founder of Ripa Elevate Academy. With a passion for education and a background in computer science and cybersecurity, Brian created this academy to provide high-quality, personalized tutoring from 1st grade through college. He believes in making learning engaging, confidence-building, and tailored to each student’s needs.</p>
-        </div>
+  <!-- About section uses the same layout classes as Home -->
+  <section class="about-section">
+    <div class="about-container">
+      <div class="about-image">
+        <img src="images/Brian_Square_Profile.png" alt="Brian, founder of Ripa Elevate Academy"/>
       </div>
-    </section>
-  </main>
+      <div class="about-text">
+        <h2>About Brian</h2>
+        <p>Brian is the founder of Ripa Elevate Academy. With a passion for education and a background in computer science and cybersecurity, Brian created this academy to provide high-quality, personalized tutoring from 1st grade through college.</p>
+        <p>He believes in making learning engaging, confidence-building, and tailored to each student’s needs. Areas of expertise include reading comprehension, foundational math, Algebra through Calculus, and targeted test prep.</p>
+        <a href="booking.html" class="btn" style="margin-top:0.5rem">Book a Session</a>
+      </div>
+    </div>
+  </section>
 
   <footer>
-    <p>&copy; 2025 Ripa Elevate Academy. All rights reserved.</p>
+    <div class="container">
+      <p>&copy; 2025 Ripa Elevate Academy. All rights reserved.</p>
+      <div class="footer-contact">
+        Phone: <a href="tel:+13479960551">347-996-0551</a> |
+        Email: <a href="mailto:ripabrian93@gmail.com">ripabrian93@gmail.com</a>
+      </div>
+    </div>
   </footer>
 </body>
 </html>
-
-
-
-
-
-
-
