--- a/resources.html
+++ b/resources.html
@@ -1,29 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Free Resources – Ripa Elevate Academy</title>
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Resources – Free & Premium | Ripa Elevate Academy</title>
+  <meta name="description" content="Free reading packets and math worksheets, plus premium tools like the Smart Diagnostic and video library.">
+  <link rel="stylesheet" href="css/style.css"/>
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Lato:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+  <!-- Shared header -->
   <header>
-    <div class="logo"><a href="index.html">Ripa Elevate Academy</a></div>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="services.html">Subjects</a>
-      <a href="pricing.html">Pricing</a>
-      <a href="booking.html">Book</a>
-      <a href="testimonials.html">Testimonials</a>
-      <a href="resources.html" class="active">Resources</a>
-      <a href="contact.html">Contact</a>
-    </nav>
+    <div class="container">
+      <div class="logo"><a href="index.html">Ripa Elevate Academy</a></div>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="services.html">Subjects</a></li>
+          <li><a href="pricing.html">Pricing</a></li>
+          <li><a href="booking.html">Book</a></li>
+          <li><a href="testimonials.html">Testimonials</a></li>
+          <li><a class="active" href="resources.html">Resources</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
+  <!-- Uses the same section spacing + cards grid as index -->
   <section class="section">
     <h2>Free & Premium Resources</h2>
     <p>Access free downloadable worksheets and reading packets. You can also unlock our premium tools including the Smart Diagnostic and video library for deeper practice.</p>
@@ -32,42 +39,99 @@
       <div class="card">
         <h3>Free Reading Packets</h3>
         <p>Printable short stories and exercises to strengthen comprehension skills across all grades. New content added regularly.</p>
+        <a class="btn" href="#reading">Download Packets</a>
       </div>
+
       <div class="card">
         <h3>Free Math Worksheets</h3>
         <p>Skill-based practice problems for grades 1–12. Great for review, homework help, or skill-building between sessions.</p>
+        <a class="btn" href="#math">Download Worksheets</a>
       </div>
+
       <div class="card">
         <h3>Premium Video Library</h3>
         <p>Subscribe for <strong>$25/month</strong> to unlock our growing video library: advanced math, SAT prep, coding, AI skills, and more.</p>
-        <p><a class="btn" href="pricing.html">See Subscription Options</a></p>
+        <a class="btn" href="pricing.html#subscription">See Subscription Options</a>
       </div>
     </div>
   </section>
 
-  <section class="section alt-bg">
-    <h2>Smart Diagnostic (Math & ELA)</h2>
-    <p>Our adaptive, ~20-minute online diagnostic pinpoints a student’s current level, shows how it compares to grade expectations, and generates a simple action plan.</p>
-
-    <div class="cards colorful">
+  <section class="section alt-bg" id="reading">
+    <h2>Reading Packets</h2>
+    <p>Short fiction and nonfiction with comprehension questions—printable and classroom-friendly.</p>
+    <div class="cards">
       <div class="card">
-        <h3>Take the Diagnostic</h3>
+        <h3>Grades 2–3</h3>
         <ul>
-          <li>Adaptive, under 40 minutes</li>
-          <li>Real-time estimated level & confidence</li>
-          <li>Clear strengths, priorities, and next steps</li>
+          <li>Short passages + multiple choice</li>
+          <li>Vocabulary in context</li>
+          <li>Main idea & details</li>
         </ul>
-        <p>
-          <a class="btn" href="diagnostic-gate.html">Start via Secure Gate</a>
-        </p>
-        <p class="small">Note: The diagnostic is included with the <strong>$25/month</strong> subscription (unlimited use). You can also unlock a one-time test for <strong>$10</strong>.</p>
+        <a class="btn" href="#">Download PDF</a>
+      </div>
+      <div class="card">
+        <h3>Grades 4–5</h3>
+        <ul>
+          <li>Mixed genres & short responses</li>
+          <li>Text evidence & inference</li>
+          <li>Author’s purpose</li>
+        </ul>
+        <a class="btn" href="#">Download PDF</a>
+      </div>
+      <div class="card">
+        <h3>Grades 6–8</h3>
+        <ul>
+          <li>Longer passages + analysis</li>
+          <li>Argument & claims</li>
+          <li>Cross-text synthesis</li>
+        </ul>
+        <a class="btn" href="#">Download PDF</a>
+      </div>
+    </div>
+  </section>
+
+  <section class="section" id="math">
+    <h2>Math Worksheets</h2>
+    <p>Topic-based sets useful for homework support and targeted practice.</p>
+    <div class="cards">
+      <div class="card">
+        <h3>Elementary Skills</h3>
+        <ul>
+          <li>Add/Subtract/Multiply/Divide</li>
+          <li>Fractions & Decimals</li>
+          <li>Word Problems</li>
+        </ul>
+        <a class="btn" href="#">Download Set</a>
+      </div>
+      <div class="card">
+        <h3>Middle School</h3>
+        <ul>
+          <li>Ratios & Proportions</li>
+          <li>Equations & Inequalities</li>
+          <li>Geometry Basics</li>
+        </ul>
+        <a class="btn" href="#">Download Set</a>
+      </div>
+      <div class="card">
+        <h3>Algebra & Beyond</h3>
+        <ul>
+          <li>Functions & Graphing</li>
+          <li>Quadratics</li>
+          <li>Pre-Calc Review</li>
+        </ul>
+        <a class="btn" href="#">Download Set</a>
       </div>
     </div>
   </section>
 
   <footer>
-    &copy; 2025 Ripa Elevate Academy. All rights reserved.
-    <div class="footer-contact">Phone: <a href="tel:+13479960551" style="color:#F28F3B">347-996-0551</a> | Email: <a href="mailto:ripabrian93@gmail.com" style="color:#F28F3B">ripabrian93@gmail.com</a></div>
+    <div class="container">
+      <p>&copy; 2025 Ripa Elevate Academy. All rights reserved.</p>
+      <div class="footer-contact">
+        Phone: <a href="tel:+13479960551">347-996-0551</a> |
+        Email: <a href="mailto:ripabrian93@gmail.com">ripabrian93@gmail.com</a>
+      </div>
+    </div>
   </footer>
 </body>
 </html>
