--- a/testimonials.html
+++ b/testimonials.html
@@ -1,54 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Testimonials – Ripa Elevate Academy</title>
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Testimonials — Ripa Elevate Academy</title>
+  <meta name="description" content="What parents and students say about Ripa Elevate Academy’s one-on-one tutoring."/>
+  <link rel="stylesheet" href="css/style.css"/>
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Lato:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+  <!-- Shared header (same as index) -->
   <header>
-    <div class="logo"><a href="index.html">Ripa Elevate Academy</a></div>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="services.html">Subjects</a>
-      <a href="pricing.html">Pricing</a>
-      <a href="booking.html">Book</a>
-      <a href="testimonials.html">Testimonials</a>
-      <a href="resources.html">Resources</a>
-      <a href="contact.html">Contact</a>
-    </nav>
+    <div class="container">
+      <div class="logo"><a href="index.html">Ripa Elevate Academy</a></div>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="services.html">Subjects</a></li>
+          <li><a href="pricing.html">Pricing</a></li>
+          <li><a href="booking.html">Book</a></li>
+          <li><a class="active" href="testimonials.html">Testimonials</a></li>
+          <li><a href="resources.html">Resources</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
+  <!-- Hero/Intro -->
   <section class="section">
-    <h2>What Parents and Students Are Saying</h2>
-    <p style="text-align: center; max-width: 700px; margin: 0 auto 2rem;">
-      Hear firsthand from families and students who have worked with Ripa Elevate Academy.
-      These stories highlight the personalized attention, professional instruction, and real results we deliver.
-    </p>
-    <div class="cards colorful">
+    <h2>What Families Are Saying</h2>
+    <p>Real results from one-on-one support—confidence up, grades up, and less stress at home.</p>
+  </section>
+
+  <!-- Testimonial Cards -->
+  <section class="section testimonials alt-bg">
+    <div class="cards">
       <div class="card">
-        <blockquote>“Brian helped my son build real confidence in math. He now looks forward to his sessions and is finally enjoying learning!”</blockquote>
+        <div style="margin-bottom:.5rem; color:#F28F3B; font-weight:700;">★★★★★</div>
+        <blockquote>Brian helped my son build real confidence in math. He now looks forward to his sessions and is finally enjoying learning!</blockquote>
         <p><em>— Parent of a middle schooler</em></p>
       </div>
       <div class="card">
-        <blockquote>“Professional, patient, and always prepared. Brian truly goes above and beyond. Highly recommend Ripa Elevate Academy!”</blockquote>
+        <div style="margin-bottom:.5rem; color:#F28F3B; font-weight:700;">★★★★★</div>
+        <blockquote>Professional, patient, and always prepared. Brian truly goes above and beyond. Highly recommend!</blockquote>
         <p><em>— High school parent</em></p>
       </div>
       <div class="card">
-        <blockquote>“The personalized lessons and consistent progress updates have helped me stay on track in college. Brian made a huge difference!”</blockquote>
+        <div style="margin-bottom:.5rem; color:#F28F3B; font-weight:700;">★★★★★</div>
+        <blockquote>The personalized lessons made a huge difference in my college math courses. Thank you!</blockquote>
         <p><em>— College student</em></p>
+      </div>
+      <div class="card">
+        <div style="margin-bottom:.5rem; color:#F28F3B; font-weight:700;">★★★★★</div>
+        <blockquote>We saw improvements after just a few sessions. Clear explanations and great practice materials.</blockquote>
+        <p><em>— 5th grade parent</em></p>
+      </div>
+      <div class="card">
+        <div style="margin-bottom:.5rem; color:#F28F3B; font-weight:700;">★★★★★</div>
+        <blockquote>Brian’s strategies for reading comprehension helped my daughter move up a level at school.</blockquote>
+        <p><em>— 3rd grade parent</em></p>
+      </div>
+      <div class="card">
+        <div style="margin-bottom:.5rem; color:#F28F3B; font-weight:700;">★★★★★</div>
+        <blockquote>Great prep for the SAT—my score jumped 120 points. Sessions were focused and efficient.</blockquote>
+        <p><em>— High school student</em></p>
       </div>
     </div>
   </section>
 
+  <!-- CTA -->
+  <section class="section">
+    <h2>Ready to see the same results?</h2>
+    <p>Book a first session or try the Smart Diagnostic to pinpoint strengths and next steps.</p>
+    <div style="text-align:center; margin-top:1rem;">
+      <a href="booking.html" class="btn" style="margin-right:.5rem;">Book a Session</a>
+      <a href="diagnostic-gate.html" class="btn">Take the Smart Diagnostic</a>
+    </div>
+  </section>
+
   <footer>
-    &copy; 2025 Ripa Elevate Academy. All rights reserved.
-    <div class="footer-contact">Phone: <a href="tel:+13479960551" style="color:#F28F3B">347-996-0551</a> | Email: <a href="mailto:ripabrian93@gmail.com" style="color:#F28F3B">ripabrian93@gmail.com</a></div>
+    <div class="container">
+      <p>&copy; 2025 Ripa Elevate Academy. All rights reserved.</p>
+      <div class="footer-contact">
+        Phone: <a href="tel:+13479960551">347-996-0551</a> |
+        Email: <a href="mailto:ripabrian93@gmail.com">ripabrian93@gmail.com</a>
+      </div>
+    </div>
   </footer>
 </body>
 </html>
+
